@@ -1,4 +1,8 @@
-﻿drkns 08.03.2015 19:08:46 +0200 - build 4294
+﻿shmuel 09.03.2015 00:15:32 +0200 - build 4295
+
+1. M#2965: При вставке вертикального блока усекаются последние символы в каждой строке.
+
+drkns 08.03.2015 19:08:46 +0200 - build 4294
 
 1. Рефакторинг.
 
